%%{
    init: {
        'theme': 'forest',
        'layout': 'elk',
        'themeVariables': {'fontSize': '32px'},
        'themeCSS': '.edgeLabel, .edgeLabel p { font-size: 32px !important; } .relationshipLine { stroke-width: 1.5px !important; }'
    }
}%%
erDiagram
    direction RL
    PERMISSIONS {
        bigint id PK
        string name UK
        string guard_name
        string group
        string audience
        string label
    }
    ROLES {
        bigint id PK
        bigint team_foreign_key
        string name UK
        string guard_name
    }
    MODEL_HAS_PERMISSIONS {
        bigint permission_id FK
        string model_type
        bigint model_id
    }
    MODEL_HAS_ROLES {
        bigint role_id FK
        string model_type
        bigint model_id
    }
    ROLE_HAS_PERMISSIONS {
        bigint permission_id FK
        bigint role_id FK
    }
    PERMISSION_ENDPOINTS {
        bigint id PK
        bigint permission_id FK
        string resource_key UK
        string group
        text description
        boolean is_active
    }
    PAGE_PERMISSIONS {
        bigint id PK
        string permission_name
        string guard_name
        string group
        text description
        string resource_key UK
        boolean is_active
    }
    PERSONAL_ACCESS_TOKENS {
        bigint id PK
        string tokenable_type
        bigint tokenable_id
        string name
        string token UK
        text abilities
        timestamp expires_at
        timestamp last_used_at
    }
    PASSWORD_RESET_TOKENS {
        bigint id PK
        string email
        string token UK
        boolean used
        timestamp expires_at
    }
    USERS {
        bigint id PK
        string username UK
        string password
        string name
        string email UK
        timestamp email_verified_at
        bigint branch_id FK
        bigint siswa_id FK
        boolean is_active
        boolean must_change_password
    }

    PERMISSIONS ||--o{ ROLE_HAS_PERMISSIONS : ""
    ROLES ||--o{ ROLE_HAS_PERMISSIONS : ""
    PERMISSIONS ||--o{ MODEL_HAS_PERMISSIONS : ""
    ROLES ||--o{ MODEL_HAS_ROLES : ""
    PERMISSIONS ||--o{ PERMISSION_ENDPOINTS : ""
    PERMISSIONS ||--o{ PAGE_PERMISSIONS : ""
    USERS ||--o{ PERSONAL_ACCESS_TOKENS : ""
    USERS ||--o{ PASSWORD_RESET_TOKENS : ""
